--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile project(':libraries:MaterialDesign')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile project(':libraries:MaterialDesign')
+    compile 'com.android.support:support-v4:23.1.1'
 }
