--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,18 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".main.SubjectsActivity" />
         </activity>
+
+        <activity
+            android:name=".main.ComicsActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".main.SubjectsActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".main.SubjectsActivity" />
+        </activity>
     </application>
 
 </manifest>
